# Studying

./: Post_dates.txt  a_id.py  acquaintances.input.txt  acquaintances.result.txt  avl_tree.py  can_divide.py  colourful_train.py  del_div.py  div_span.py  f1.txt  f2.txt  fabric.py  figures.py  ladders2.py  ladders_rec.py  links_detect.py  local_paths.py  nails2.py  nails_nd_ropes.py  new_scripts.txt  num_of_ladders.py  regex1a.py  regex1b.py  regex2.py  regex3.py  regex4.py  test.py  test2.py  tickets_buying2.py  turtle_ways.py
Addition/: .ppl_split_version2.py.swp  .ppl_split_version2_LOCAL_630.py.swp  .ppl_split_version2_REMOTE_630.py.swp  acquaintances_version2.py  can_divide.py  ppl_split.py  ppl_split_input.txt  ppl_split_output.txt  ppl_split_version2.py  ppl_split_version2_BACKUP_630.py  ppl_split_version2_LOCAL_630.py
AlgCourse/: fibonacci_realisations.py
Algorithms/: Bellman_ford.py  bell_ford.py  bellman_ford.py  bellman_ford1.py  bellman_ford2.py  bellman_ford3.py  bellman_ford4.py  dijkstra.py  dijkstra2.py  dijkstra_sorted_dict.py  effective_search.py  parenthasis.py
DS/: avl_tree.py
DataFind/: info_by_ip.py
DataStructures/: heap_realisation.py  n_2.py
Dinamic/: pascal_triangle.py  pascal_triangle_inverse.py
DinamicProg/: golden_pyramid.py
Files/: view-source_https___ru.wikipedia.org_wiki_Гиперссылка.html
Graphs/: can_divide.py
Hierarchy/: fabric.py  figures.py
LC/: n_1137.py  n_1365.py  n_143.py  n_169.py  n_1926.py  n_2.py  n_203.py  n_206.py  n_21.py  n_2256.py  n_231.py  n_234.py  (+25 more)
mylib/src/shulte/: README.md  license  setup.cfg
(+219 files in other folders)
