[metadata]
name = shulte-ulasevich
version = 0.0.5
author = Ulasevich Ulyana
author_email = ulasevich.2003@inbox.ru
description = Generating Shute tables
long_description = file: README.md
long_description_content_type = text/markdown
url = http://schulte-table.com/
project_urls =
     Bug Tracker = http://schulte-table.com/task/add
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
[options]
package_dir = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src